fixed a bug with the header being not responsive when navigating to about on mobile and tablet

--- a/src/css/AboutUsPage/AboutContent.css
+++ b/src/css/AboutUsPage/AboutContent.css
@@ -268,3 +268,12 @@
         text-align: center;
     }
 }
+
+@media (max-width: 768px) {
+  .tm-about-image-container[data-aos] {
+    opacity: 1 !important;
+    transform: none !important;
+    animation: none !important;
+    visibility: visible !important;
+  }
+}
